--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     </dependencies>
 
     <build>
+        <testSourceDirectory>Tests</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
