--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 
 # Created by https://www.gitignore.io/api/linux,macos,windows,eclipse,intellij,netbeans
 # Edit at https://www.gitignore.io/?templates=linux,macos,windows,eclipse,intellij,netbeans
+db.properties
+cupcake.iml
+nb-configuration.xml
 
 ### Eclipse ###
 .metadata
