--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,windows,eclipse,intellij,netbeans
+/nbproject/
+/target/
