--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,windows,eclipse,intellij,netbeans
+/nbproject/
+/target/
