--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,6 +71,10 @@ steps:
   inputs:
     script: 'docker run --rm --network=selenium --name maven --link selenium-hub --link mysql -v $(System.DefaultWorkingDirectory):/usr/src/mymaven -w /usr/src/mymaven maven:3.6.2-jdk-11 mvn test -Pui-test'
 
+- task: CmdLine@2
+  inputs:
+    script: 'docker run --rm --name maven --link mysql -v $(System.DefaultWorkingDirectory):/usr/src/mymaven -w /usr/src/mymaven maven:3.6.2-jdk-11 mvn sonar:sonar'
+
 - task: CopyFiles@2
   inputs:
     SourceFolder: 'target'
